# ReparametrizableDistributions.jl

./: .gitignore  .nojekyll  Manifest.toml  Project.toml  README.md  ScaleHierarchy.html  index.html  listings.json  robots.txt  search.json  sitemap.xml
examples/: .gitignore  CmdStanR.html  Manifest.toml  README.md  ScaleHierarchy.html  ScaleHierarchy.qmd  _quarto.yml  index.qmd
examples/.jupyter_cache/: global.db
examples/_site/: ScaleHierarchy.html  index.html  search.json  sitemap.xml
ext/: ReparametrizableDistributionsReverseDiffExt.jl
page/: .gitignore  Manifest.toml  Project.toml  _quarto.yml  index.qmd  pyproject.toml
page/examples/: CmdStanR.qmd  ScaleHierarchy.qmd
page/examples/CmdStanR_cache/html/: unnamed-chunk-1_7c0c8e6395cb8fd1ae68fac32c57488d.RData  unnamed-chunk-1_7c0c8e6395cb8fd1ae68fac32c57488d.rdb  unnamed-chunk-1_7c0c8e6395cb8fd1ae68fac32c57488d.rdx  unnamed-chunk-2_5a0450462c19866db3f9b623580449f1.RData  unnamed-chunk-3_3ae6b45cf55cded5d10e4fe5955348a3.RData
page/examples/R/: dynamic  dynamic.R  dynamic.stan
page/examples/stan/: dynamic.stan
src/: AbstractReparametrizableDistribution.jl  GammaSimplex.jl  HSGP.jl  LocScaleHierarchy.jl  R2D2.jl  ReparametrizableDistributions.jl  ScaleHierarchy.jl  StackedVector.jl
src/distributions/: AbstractCompositeReparametrizableDistribution.jl  AbstractReparametrizableDistribution.jl  AbstractWrappedDistribution.jl  Dirac0.jl  Directional.jl  FixedDistribution.jl  GammaSimplex.jl  HSGP.jl  MeanShift.jl  R2D2.jl  RHS.jl  ReparametrizableBSLDP.jl  ReparametrizablePosterior.jl  (+1 more)
test/: runtests.jl
(+16 files in other folders)
